--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h1 {
 .piano-container {
   position: relative;
   display: inline-block;
-  background: linear-gradient(145deg, #183040, #0b344f);
+  background: linear-gradient(135deg, #1c1c1f 0%, #3e3647 100%);
 
   padding: 15px;
   border-radius: 15px;
