--- a/css/layout.css
+++ b/css/layout.css
@@ -66,11 +66,18 @@ main {
   gap: 30px;
 }
 
+.middle-c-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  color: rgb(222, 222, 222);
+}
 /* === Tab Group Styling === */
 .tab-group {
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
-  min-height: 200px;
+  min-height: 400px;
   background: #1c1c1c;
   border: 1px solid #444;
   border-radius: 6px;
@@ -84,13 +91,6 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-}
-
-/* Middle C dropdown */
-.middle-c-label {
-  color: #ddd;
-  margin-bottom: 5px;
-  font-size: 0.9rem;
 }
 
 .tab-nav {
@@ -124,7 +124,8 @@ main {
   border: 1px solid #333;
   padding: 20px;
   border-radius: 6px;
-  min-height: 120px;
+  min-height: 380px;
+  max-height: 380px;
 }
 
 .hidden {
