--- a/css/midonika.css
+++ b/css/midonika.css
@@ -1,6 +1,6 @@
 :root {
   --bg: #0e0f12;
-  --panel: #16181d;
+  --panel: color(display-p3 0.106 0.106 0.106);
   --text: #e6e7eb;
   --muted: #9aa3af;
   --accent: #7aa2ff;
@@ -41,7 +41,7 @@ body {
 
 .panel {
   background: var(--panel);
-  border: 1px solid #23262e;
+  border: 1px solid color(display-p3 0.2 0.2 0.2);
   border-radius: var(--rounded);
   padding: 12px 16px 16px;
   max-height: 352px;
@@ -84,7 +84,7 @@ h2 {
 }
 
 .log {
-  background: #0b0c10;
+  background: #0f1012;
   border: 1px solid #23262e;
   border-radius: 6px;
   padding: 12px;
@@ -122,7 +122,7 @@ h2 {
 .footer-row .status {
   margin: 0;
   font-size: 14px;
-  color: greenyellow;
+  color: rgb(203, 246, 137);
   flex-grow: 1; /* pushes the button to the right */
 }
 
