--- a/css/layout.css
+++ b/css/layout.css
@@ -158,3 +158,9 @@ main {
 .hidden {
   display: none;
 }
+
+#midiDeviceSelector {
+  background-color: #1e1e1e;
+  color: #e0e0e0;
+  border: 1px solid #444;
+}
